# qiskit-ibm-catalog

./: .buildinfo  .gitignore  .pylintrc  README.md  constraints.txt  ecosystem.json  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/apidocs/: catalog.doctree  index.doctree  serverless.doctree
.doctrees/nbsphinx/tutorials/: catalog.ipynb
.doctrees/stubs/: qiskit_ibm_catalog.catalog.QiskitFunctionsCatalog.doctree  qiskit_ibm_catalog.serverless.QiskitServerless.doctree
.doctrees/tutorials/: catalog.doctree  index.doctree  serverless.doctree
.github/: CODEOWNERS
.github/workflows/: citation.yml  client-pypi-release.yaml  coverage.yml  docs.yml  ecosystem.yml  lint.yml  test_latest_versions.yml  test_templates.yml  update-version-pr.yaml
_modules/: index.html
_modules/qiskit_ibm_catalog/: catalog.html  serverless.html
_sources/apidocs/: catalog.rst.txt  index.rst.txt
_sources/stubs/: qiskit_ibm_catalog.catalog.QiskitFunctionsCatalog.rst.txt  qiskit_ibm_catalog.serverless.QiskitServerless.rst.txt
apidocs/: catalog.html  index.html  serverless.html
docs/: conf.py  index.rst
docs/apidocs/: serverless.rst
docs/tutorials/: catalog.ipynb  serverless.ipynb
docs/tutorials/src/: entrypoint.py
qiskit_ibm_catalog/: __init__.py  catalog.py  serverless.py
stubs/: qiskit_ibm_catalog.catalog.QiskitFunctionsCatalog.html  qiskit_ibm_catalog.serverless.QiskitServerless.html
templates/: README.md
templates/hamiltonian-simulation/: README.md  hamsim_template.ipynb  hamsim_template.pregenerated.py  hamsim_template0.ipynb  hw_results_aqc.pkl  hw_results_comparison.pkl  requirements.txt  serverless_demo.ipynb  test_hamsim_template.py
test/: test_catalog.py  test_serverless.py
tests/: test_wrappers.py
tutorials/: catalog.html  index.html  serverless.html  serverless.ipynb
