# file pyproject.toml
[build-system]
requires = [
    "setuptools>=70.0.0",
    "wheel",
    "toml",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "qiskit_ibm_catalog"
dynamic = [
    "version", "dependencies"
]
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
description = ""
authors = []

[project.urls]
"Homepage" = "https://github.com/Qiskit/qiskit-ibm-catalog"
"Bug Tracker" = "https://github.com/Qiskit/qiskit-ibm-catalog/issues"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ['qiskit_ibm_catalog*']
exclude = ['qiskit_ibm_catalog*tests']

[tool.setuptools.dynamic]
version = { file = "qiskit_ibm_catalog/VERSION.txt" }
dependencies = { file = "requirements.txt" }
